--- a/hack2.css
+++ b/hack2.css
@@ -5,10 +5,10 @@
     #head1{height:200px;width:900px; font-size:100px;color:black;}
     #box1{height:30px;width:500px; background-color:#660033;}
     #head2{height:90px;width:500px; font-size:40px; color:white;background-color:#660033;}
-#home{height:580px;width:240px;font-size:40px;color:black;background-color:maroon;float:left;}
-#about{height:580px;width:240px;font-size:40px;color:black;background-color:#ff6666;float:left;}
-#recipes{height:580px;width:240px;font-size:40px;color:black;background-color:maroon;float:left;}
-#contact{height:580px;width:240px;font-size:40px;color:black;background-color:#ff6666;float:left;}
-#order{height:580px;width:240px;font-size:40px;color:black;background-color:maroon;float:right;}
+#home{height:580px;width:240px;font-size:40px;color:black;font-family:georgia;background-color:maroon;float:left;text-align:center;}
+#about{height:580px;width:240px;font-size:40px;color:black;font-family:georgia;background-color:#ff6666;float:left;text-align:center;}
+#recipes{height:580px;width:240px;font-size:40px;color:black;font-family:georgia;background-color:maroon;float:left;text-align:center;}
+#contact{height:580px;width:240px;font-size:40px;color:black;font-family:georgia;background-color:#ff6666;float:left;text-align:center;}
+#order{height:580px;width:240px;font-size:40px;color:black;font-family:georgia;background-color:maroon;float:right;text-align:center;}
 /*Anika coded the order and the contact*/
  /*Emily coded the home and the about and the recipes*/
