--- a/Final2.css
+++ b/Final2.css
@@ -4,7 +4,7 @@
     background-color:white;}
 #head1{height:150px;width:900px; font-size:50px;color:black; text-align: center;}
 #box1{height:30px;width:900px; background-color:#44B3C2; }
-#head2{height:90px;width:500px; font-size:40px; color:white; background-color:#F1A94E;}
+#head2{height:90px;width:500px; font-size:40px; color:white; background-color:#F1A94E;font-family:Snell Roundhand;}
 .center-div
 {
   width: 200px;
@@ -22,4 +22,38 @@
 #block{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;}
 #oranges{height:300px;width:200px;font-size:35px;color:white;font-family:georgia;background-color:#E45641;float:left;text-align:center;background-image:url("https://s-media-cache-ak0.pinimg.com/236x/a2/e1/a6/a2e1a612933ac92d91d07d88572ce4c4--oranges-wallpaper-wallpaper-orange.jpg");}
 #box{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;}
+a
+{
+    color: #ffffff;
+}
+#home:hover {
+    background-color: #44B3C2;
+}
+#about:hover {
+    background-color: #F1A94E;
+}
+#truths:hover {
+    background-color: #44B3C2;
+}
+#hackathons:hover {
+    background-color: #F1A94E;
+}
+#jokes:hover {
+    background-color: #44B3C2;
+}
+#madlibs:hover {
+    background-color: #F1A94E;
+}
+#final_project:hover {
+    background-color: #44B3C2;
+}
+#block:hover {
+    background-color: #F1A94E;
+}
+#oranges:hover {
+    background-color: #44B3C2;
+}
+#box:hover {
+    background-color: #F1A94E;
+}
 /*These lines of code are for outlining the div tags and showing what text and at what specifications should show up*/
