--- a/FinalProject2.css
+++ b/FinalProject2.css
@@ -8,14 +8,17 @@ p {
     color: coral;
 }
 h3 {
-    color: #ffdac5;
+    color: coral;
 }
 h4 {
-    color: darkgray;
+    color: coral;
 }
 #score {
     color: skyblue;
 }
 body {
     color: #5D4C46;
+}
+body {
+background-color: #e4e4e4;
 }
