--- a/Final2.css
+++ b/Final2.css
@@ -19,7 +19,7 @@
 #jokes{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#E45641;float:left;text-align:center;}
 #madlibs{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;}
 #final_project{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#E45641;float:left;text-align:center;}
-#block{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;}
+#block{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;background-image:url("https://media.giphy.com/media/E8BKRmebpiire/giphy.gif");}
 #oranges{height:300px;width:200px;font-size:35px;color:white;font-family:georgia;background-color:#E45641;float:left;text-align:center;background-image:url("https://s-media-cache-ak0.pinimg.com/236x/a2/e1/a6/a2e1a612933ac92d91d07d88572ce4c4--oranges-wallpaper-wallpaper-orange.jpg");}
 #box{height:300px;width:200px;font-size:40px;color:white;font-family:georgia;background-color:#5D4C46;float:left;text-align:center;}
 a
@@ -51,7 +51,12 @@ a
     background-color: #F1A94E;
 }
 #oranges:hover {
-    background-color: #44B3C2;
+}
+.blueOverlay:hover{
+    background-color: rgba(68,179,194,1);
+}
+.orangeOverlay:hover{
+    background-color: #F1A94E;
 }
 #box:hover {
     background-color: #F1A94E;
